...
                    }
                    return false;
                  },
                  child: Scrollbar(
                    controller: scroll,
                    child: ListView.builder(
                      key: const Key('chat-list'),
                      controller: scroll,
                      reverse: true,
                      padding: EdgeInsets.fromLTRB(
                        MediaQuery.sizeOf(context).width < 880 ? 6 : 42,
                        8,
                        MediaQuery.sizeOf(context).width < 880 ? 6 : 42,
...
